trying to fix subscribe container on safari

--- a/src/view/static/style/master.css
+++ b/src/view/static/style/master.css
@@ -204,6 +204,7 @@ nav {
     min-width: 25rem;
     max-width: 50rem;
     width: 50%;
+    margin: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -213,7 +214,7 @@ nav {
 }
 .subscribe-form {
     margin: 2rem auto;
-    height: 100%;
+    height: 90%;
     width: 100%;
     display: grid;
     justify-items: center;
@@ -227,12 +228,13 @@ nav {
 input[type=text], input[type=email] {
     height: 2rem;
     width: 90%;
+    margin: 0;
     border-radius: 0.5rem;
     border-style: hidden;
     padding-left: 0.5rem;
 }
 label {
-    margin-left: 1vw;
+    margin-left: 0 0 0 1vw;
     color: white;
     font-size: 1.3rem;
 }
